--- a/src/App.scss
+++ b/src/App.scss
@@ -1323,19 +1323,36 @@ $colorBGnav:#e0e0e0;
 //modalContentWork
 .body-modalbox-contentwork{
     width: 100%;
-    height: 360px;
+    height: 300px;
+}
+.body-modalbox-contentwork span{
+    font-size: 13px;
+    font-weight: bold;
 }
     .rowinput-modalbox-contentwork{
         width: 80%;
         height: auto;
         display: grid;
         grid-template-columns: 25% 75%;
-        margin: auto;
+        margin: 5px auto;
+    }
+    .positionRelativeBox{
+        position: relative;
     }
     .boxgrid-modal-contentwork{
         display: flex;
         align-items: center;
-        justify-content: start;
+        justify-content: start;;
+    }
+    .dropInfo-boxgrid-contentwork{
+        width: 100%;
+        height: 100px;
+        position: absolute;
+        top: 20px;
+        left: 0;
+        background-color: #fefefe;
+        display: none;
+        border: 1px solid red;
     }
     .timegrid-modal-contentwork{
         display: flex;
@@ -1350,7 +1367,7 @@ $colorBGnav:#e0e0e0;
             border: 1px solid $colorBorderDrop;
         }
         .btn-rowinput-modalboxContentwork{
-            height: 60%;
+            height: 100%;
             width: auto;
             border: 1px solid $colorBorderDrop;
         }
@@ -1387,8 +1404,51 @@ $colorBGnav:#e0e0e0;
         }
     .box-special-modalboxcontentwork{
         width: 100%;
-        border: 1px solid red;
+        height: auto;
     }
+    .special-input-boxcontentwork{
+        width: 80%;
+        margin: 5px auto;
+        display: grid;
+        grid-template-columns: 25% 75%;
+    }
+        .box-report-input{
+            width: 80%;
+            margin:  5px auto;
+            display: grid;
+            grid-template-columns: 25% 75%;
+        }
+        .col-boxreport-input{
+            display: grid;
+            grid-template-columns: 50% 50%;
+        }
+    .inputradio-special-boxcontentwork{
+        display: flex;
+        justify-content: start;
+    }      
+    .input-special-boxcontentwork{
+        width: 100%;
+        height: 100%;
+    }  
+        .grid-date-subcol{
+            display: grid;
+            grid-template-columns: 50% 50%;
+        }
+    .date-special-boxcontentwork{
+        display: flex;
+        align-items: center;
+    }
+        .date-special-boxcontentwork input{
+            width: 100%;
+            height: 100%;
+        }
+        .input-special-boxcontentwork input{
+            width: 95%;
+            height: 100%;
+        }
+        .inputradio-special-boxcontentwork input{
+            margin: 5px;
+        }
 @media only screen and (max-width:720px) {
     .header-contentwork{
         height: 10%;
@@ -1449,6 +1509,85 @@ $colorBGnav:#e0e0e0;
  }
 }
 
+@mixin ContentSetting(){
+    .body-contentSetting{
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    .header-nav-contentSetting{
+        border: 1px solid red;
+        height: 5%;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 90% 10%;
+    }
+        .boxCol-navheader{
+            border: 1px solid green;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    .btn-nav-menuclose{
+        display: none;
+    }
+    .btn-boxHeader button{
+        margin: 0 5px;
+    }
+    .content-contentSetting{
+        border: 1px solid blue;
+        height: 95%;
+        width: 100%;
+    }
+    .box-table-type{
+        height: 150px;
+        width: 100%;
+        border: 1px solid orange;
+    }
+// modalSetting
+
+    .bodymodal-contentSetting{
+        border: 1px solid red;
+        width: 100%;
+        height: auto;
+    }
+    .rowbox-contentSetting{
+        height: 80px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .btn-addreportDoc{
+        height: 60%;
+        width: 30%;
+        margin: 0 5px;
+    }
+
+// modalSetting
+
+@media only screen and (max-width:720px) {
+    .header-nav-contentSetting{
+        height: 10%;
+    }
+    .content-contentSetting{
+        height: 90%;
+    }
+   
+}
+@media only screen and (max-width:360px) {
+    .header-nav-contentSetting{
+        height: 5%;
+    }
+    .content-contentSetting{
+        height: 95%;
+    }
+}
+}
+
 @mixin ModalSlideBar(){
     .modal-slideBar-body{
         display: none;  
@@ -1456,7 +1595,6 @@ $colorBGnav:#e0e0e0;
         z-index: 1;  
         left: 0;
         top: 0;
-        margin-top: 27px;
         width: 100%; 
         height: 100%; 
         overflow: auto; 
@@ -1467,6 +1605,7 @@ $colorBGnav:#e0e0e0;
         margin-right: 10px;
         height:50%;
         width: 13.5%;
+        margin-top: 29px;
         position: absolute;
         top: 0;
         right: 0;
@@ -1480,6 +1619,9 @@ $colorBGnav:#e0e0e0;
     @keyframes closeSlideBar {
         from{height:55%}to{height: 0;}
     }
+    .modal-slideBar-content{
+        margin-top: 19px;
+    }
 }   
 @media only screen and (max-width:360px){
     @keyframes openSlideBar {
@@ -1487,6 +1629,9 @@ $colorBGnav:#e0e0e0;
     }
     @keyframes closeSlideBar {
         from{height:32%}to{height: 0;}
+    }
+    .modal-slideBar-content{
+        margin-top: 27px;
     }
 }   
 
@@ -1881,6 +2026,7 @@ html,body{
     @include ContentDoctor();
     @include ContentGroupStudent();
     @include ContentWork();
+    @include ContentSetting();
 
     // modal
     @include ModalSlideBar();
